2002-02-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* aclocal.m4 (smr_CHECK_LIB):
	fixed a bug with variable expansion and autoconf cache values w/
	autoconf-2.52

2002-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (moveLoop):
	fixed a problem with keyboard movement vs. EdgeResistance

2002-02-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c:
	fixed problem with root bindings and xfishtank

	* fvwm/windowlist.c (CMD_WindowList):
	applied patch by to Darren Marshall to fix placement of window list on
	wrong xinerama screen

2002-02-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (PositiveWrite):
	fixed core dump when a module died in the select of PositiveWrite()

	* fvwm/icons.c (GetXPMFile):
	suppress unnecessary error message for xmb icons

2002-02-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	fixed propagation of window border and title colours to the modules

2002-02-03 olicha  <olivier.chapuis@free.fr>

	* NEWS: TaskBar news

2002-01-30  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	added generation of utils/fvwm24_convert

2002-01-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (RaiseOrLowerWindow):
	(restack_windows):
	(collect_transients_recursive):
	* fvwm/icons.c (get_visible_icon_window_count):
	fixed stack ring corruption with icons that have either no picture or
	no title

2002-01-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/read.c (run_command_stream):
	fixed an error message

2002-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	changed version to 2.4.6

	* fvwm/conditional.c (CreateConditionMask):
	fixed parsing of conditions with more than one comma

2002-01-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	small bug fixes

2002-01-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (expand):
	fixed core dump when using something like $[$v] in a command
