@@ -178,6 +178,7 @@ enum
   STROKE_ARG(F_STROKE)
   STROKE_ARG(F_STROKE_FUNC)
   F_STYLE,
+  F_THIS,
   F_TITLE,
   F_TITLESTYLE,
   F_TOGGLE_PAGE,
