@@ -1,3 +1,13 @@
+2002-02-27  Mikhael Goikhman  <migo@homemail.com>
+
+	* fvwm/commands.h:
+	* fvwm/conditional.c (CMD_This):
+	* fvwm/functions.c:
+	* fvwm/functions.h:
+	* fvwm/fvwm2.1:
+	* NEWS:
+	added new conditional command This
+
 2002-02-26  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* aclocal.m4 (smr_CHECK_LIB):
